# hometest-service

./: .editorconfig  .env.example  .gitignore  .gitleaksignore  .markdownlint.yaml  .mise.toml  .pre-commit-config-local.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .sqlfluff  .tool-versions  .trivyignore  .yamllint  CONTRIBUTING.md  Makefile  README.md  docker-compose.local.yml  docker-compose.localstack.yml  eslint.config.mjs  issues.md  package-lock.json  package.json  pnpm-lock.yaml  sonar-project.properties  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yaml
.mcp/: server-config.json
apim/: proxygen-settings.yaml
architecture/: README.md  api_spec.yaml  home-test-consumer-api.yaml  supplier_api_spec.yaml
database/: 00-delete.sql  01-init.sql  02-tables.sql  03-seed-hometest-data.sql  03-seed.sql  03-static-data.sql  04-seed.sql  create-schema.sql  db-migrate-schema.sh  delete.sql  init.sql  schema_diagram.puml  seed.sql  tables.sql
mock-service/: Cargo.toml  README.md  jest.config.ts  package.json  tsconfig.json
mock-service/docs/: test-scenario-routing.md
mock-service/scripts/: build.sh  build.ts  package.sh  package.ts
mock-service/src/: index.ts  main.rs  router.test.ts  router.ts  stub-matcher.test.ts  stub-matcher.ts  template-engine.test.ts  template-engine.ts
mock-service/src/handlers/: health.ts  jwks.test.ts  jwks.ts  oauth-token.test.ts  oauth-token.ts  order.ts  postcode.ts  results.ts
mock-service/src/test-utils/: mock-event.ts
mock-service/src/utils/: response.ts
(+2413 files in other folders)
