[package]
name = "mock-service"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["full"] }
stubr = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
